<resources>
    <string name="app_name">Movies Index</string>
    <string name="title_activity_movies_info">Movies Index</string>
    <string name="favourite_movies">Favourite Movies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main">Movies Index</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="made_with_love">Made with</string>
    <string name="in_india">in</string>
    <string name="categories">Categories</string>
    <string name="movies_index">Movies Index</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="now_playing">Now Playing</string>
    <string name="genres">Filter By Genres</string>
    <string name="search_any_movie">Search Any Movie</string>
    <string name="download">Download</string>
    <string name="sort_by_popularity">Sort By Popularity</string>
    <string name="sort_by_rating">Sort By Rating</string>
    <string name="play_dumb_charades">Play Dumb Charades</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Enter email</string>
    <string name="password">Enter password</string>
    <string name="login">LOGIN</string>
    <string name="Registration">REGISTRATION</string>
    <string name="Register">Register</string>
    <string name="return_to_login">Return to login</string>
    <string name="logout">logout</string>
    <string name="rate">RATE</string>
    <string name="rate_film">rate film</string>
    <string name="int_0_10">int 0-10</string>
    <string name="write_review_for_the_movie">write review for the movie</string>
    <string name="review">Review</string>
    <string name="register">Register</string>
    <string name="movies_index_register">Movies-Index</string>
    <string name="login_page">Login</string>
    <string name="register_now">Register now</string>


</resources>



