<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent" android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin" tools:context = ".view.RegistrationActivity">

    <TextView android:text = "Register" android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/textview"
        android:textSize = "35dp"
        android:layout_marginTop="250dp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/email"
        android:hint = "@string/email"
        android:focusable = "true"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:layout_marginTop = "296dp"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/email"
        android:layout_alignEnd="@+id/email"
        android:textColorHint="#ffff299f"
        android:hint="@string/password" />
    
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-118dp"
        android:layout_marginRight="-118dp"
        android:layout_marginBottom="250dp"
        android:layout_toStartOf="@+id/textview"
        android:layout_toLeftOf="@+id/textview"
        android:text="@string/Register" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Movies-Index"
        android:height="70dp"
        android:width="220dp"
        android:textSize="35sp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="90dp" />

    <TextView
        android:id="@+id/loginNow"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_to_login"
        android:layout_marginTop="450dp" />

</RelativeLayout>